--- a/index.html
+++ b/index.html
@@ -157,6 +157,8 @@
       <li><a href="https://generative.fm/">generative.fm</a></li>
       <li><a href="http://podomatic.com/">podomatic.com</a></li>
       <li><a href="http://electroswing-radio.com/">electroswing-radio.com</a></li>
+      <li><a href="http://wfmu.org/">wfmu.org</a></li>
+      <li><a href="http://ashevillefm.org/">ashevillefm.org</a></li>
       </li>
 </article>
 <article id="j"> 
