--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="UTF-8">
   <title>Wax9</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/png" href="https://wax9.com/wax9favicon.png" />
 </head>
 <body>
 <article id="a0">
