--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
       <li><a href="http://www.duke-energy.com/">duke-energy</a></li>
       <li><a href="http://www.att.com/">AT&amp;T</a></li>
       <li><a href="http://www.verizon.com/">Verizon</a></li>
-      <li><a href="https://www.billerpayments.com/app/cust/login.do?bsn=ubill">water</a></li>
+      <li><a href="https://hendersonville.munisselfservice.com/citizens/default.aspx">water</a></li>
 
       <br>
       <li><a href="https://www.chase.com/">Chase</a></li>
