--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <li><a href="http://hifructose.com/">Hi-Fructose</a></li>
       <li><a href="http://hyperallergic.com/">hyperallergic</a></li>
       <li><a href="http://wewastetime.com/">wewastetime</a></li>
-      <li><a href="http://littlelimpstiff14u2.tumblr.com/">Optically Addicted</a></li>
+      <li><a href="https://opticallyaddicted.tumblr.com">Optically Addicted</a></li>
       </li>
 </article>
 <article id="e"> 
