--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <header id="b">Computers</header>
       <ul>
       <li><a href="http://daringfireball.net/">Daring Fireball</a></li>
-      <li><a href="http://www.oreilly.com/ideas">oreilly.com/ideas</a></li>
+      <li><a href="https://www.oreilly.com/radar/topics/four-short-links/">4shortlinks</a></li>
       <li><a href="http://lobste.rs/">lobste.rs<br></a>
       <li><a href="http://reddit.com/r/programming">programming subreddit</a></li>
       <li><a href="http://slashdot.org">Slashdot</a></li>
