--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
       <li><a href="http://electroswing-radio.com/">electroswing-radio.com</a></li>
       <li><a href="http://wfmu.org/">wfmu.org</a></li>
       <li><a href="http://ashevillefm.org/">ashevillefm.org</a></li>
+      <li><a href="https://www.newsounds.org/">NewSounds</a></li>
       </li>
 </article>
 <article id="j"> 
