--- a/50/index.html
+++ b/50/index.html
@@ -3,23 +3,30 @@
 <head>
   <meta name="viewport" content="width=device-width">
   <meta charset="UTF-8">
-  <title>Wax9</title>
+  <title>50</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" href="https://wax9.com/wax9favicon.png" />
 </head>
   <style>
+    body {
+     background: url(https://upload.wikimedia.org/wikipedia/commons/b/be/New_hampshire_in_autumn.jpg) no-repeat top left;
+     background-size: contain;
+    }
     p {
      margin-left: auto;
      margin-right: auto;
-     width: 50em;
+     width: 80em;
      
     }
     .textblock {
      background: url(50.svg) no-repeat top left;
      background-size: contain;
+     font-family: Helvetica, "Trebuchet MS", Verdana, sans-serif;
+     font-size: 1.4em;
     }
   </style>
 <body>
+<a title="Someone35 [CC BY-SA 3.0 (https://creativecommons.org/licenses/by-sa/3.0)], via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File:New_hampshire_in_autumn.jpg"><img width="512" alt="New hampshire in autumn" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/be/New_hampshire_in_autumn.jpg/512px-New_hampshire_in_autumn.jpg"></a>
 <div class="textblock">
 <p>
 Fifty truly is a grand old age,<br>
