--- a/50/index.html
+++ b/50/index.html
@@ -9,7 +9,7 @@
 </head>
   <style>
     body {
-     background: url(https://upload.wikimedia.org/wikipedia/commons/b/be/New_hampshire_in_autumn.jpg) no-repeat top left;
+     background: url("https://upload.wikimedia.org/wikipedia/commons/b/be/New_hampshire_in_autumn.jpg") no-repeat top left;
      background-size: contain;
     }
     p {
