--- a/50/index.html
+++ b/50/index.html
@@ -26,7 +26,6 @@
     }
   </style>
 <body>
-<a title="Someone35 [CC BY-SA 3.0 (https://creativecommons.org/licenses/by-sa/3.0)], via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File:New_hampshire_in_autumn.jpg"><img width="512" alt="New hampshire in autumn" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/be/New_hampshire_in_autumn.jpg/512px-New_hampshire_in_autumn.jpg"></a>
 <div class="textblock">
 <p>
 Fifty truly is a grand old age,<br>
@@ -65,5 +64,9 @@ Still juggling work, commitments, memory gaps,<br>
 life and health and lots of cozy naps.<br>
 </p>
 </div>
+  <a title="Someone35 [CC BY-SA 3.0 (https://creativecommons.org/licenses/by-sa/3.0)], 
+          via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File:New_hampshire_in_autumn.jpg">
+  Background Image</a>
+
 </body>
 </html>
