--- a/50/index.html
+++ b/50/index.html
@@ -19,6 +19,9 @@
      
     }
     .textblock {
+     margin-left: auto;
+     margin-right: auto;
+     width: 80em;
      background: url(50.svg) no-repeat top left;
      background-size: contain;
      font-family: Helvetica, "Trebuchet MS", Verdana, sans-serif;
@@ -64,9 +67,7 @@ Still juggling work, commitments, memory gaps,<br>
 life and health and lots of cozy naps.<br>
 </p>
 </div>
-  <a title="Someone35 [CC BY-SA 3.0 (https://creativecommons.org/licenses/by-sa/3.0)], 
-          via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File:New_hampshire_in_autumn.jpg">
-  Background Image</a>
-
+  Background Image: Someone35 [<a href="https://creativecommons.org/licenses/by-sa/3.0">CC BY-SA 3.0</a>], 
+  <a href="https://commons.wikimedia.org/wiki/File:New_hampshire_in_autumn.jpg">via Wikimedia Commons</a>
 </body>
 </html>
