--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
       <li><a href="https://forecast.weather.gov/MapClick.php?lat=35.3331&lon=-82.4796">NOAA</a></li>
       <li><a href="https://www.wunderground.com/forecast/us/nc/hendersonville/KNCHENDE105?cm_ven=localwx_10day">Weather Underground</a></li>       
       <li><a href="https://darksky.net">darksky.net</a></li>
+      <li><a href="https://www.windy.com/">windy.com</a></li>
       </li>
 </article>
 <article id="g"> 
