--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
       <li><a href="http://wfmu.org/">wfmu.org</a></li>
       <li><a href="http://ashevillefm.org/">ashevillefm.org</a></li>
       <li><a href="https://www.newsounds.org/">NewSounds</a></li>
+        <li><a href="http://musicforprogramming.net/">musicforprogramming.net</a></li>
       </li>
 </article>
 <article id="j"> 
