--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <li><a href="https://www.nps.gov/blri/planyourvisit/roadclosures.htm/">Blue Ridge Parkway Road Closures</a></li>
             <li><a href="http://www.hikewnc.info/">HikeWNC</a></li>
             <li><a href="http://www.ncwaterfalls.com/">ncwaterfalls.com<br>
-            </a><li><a href="http://www.mappingsupport.com/p/gmap4.php?ll=37.125286,-83.979493&amp;t=m&amp;z=5&amp;label=off&amp;coord=latlng">mappingsupport (Gmap4)</a></li>     
+            </a><li><a href="https://mappingsupport.com/p2/gissurfer.php">GISsurfer (Gmap4)</a></li>     
             <li><a href="http://www.npmaps.com/">National Park Maps</a></li>
             <li><a href="http://www.ashevilletrails.com/">Asheville Trails</a></li>
       Maps -Government<br>
