--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <li><a href="http://hifructose.com/">Hi-Fructose</a></li>
       <li><a href="http://hyperallergic.com/">hyperallergic</a></li>
       <li><a href="http://wewastetime.com/">wewastetime</a></li>
-      <li><a href="https://opticallyaddicted.tumblr.com">Optically Addicted</a></li>
+      <li><a href="https://laughingsquid.com/">Laughing Squid</a></li>
       </li>
 </article>
 <article id="e"> 
@@ -163,7 +163,8 @@
       <li><a href="http://wfmu.org/">wfmu.org</a></li>
       <li><a href="http://ashevillefm.org/">ashevillefm.org</a></li>
       <li><a href="https://www.newsounds.org/">NewSounds</a></li>
-        <li><a href="http://musicforprogramming.net/">musicforprogramming.net</a></li>
+      <li><a href="http://musicforprogramming.net/">musicforprogramming.net</a></li>
+      <li><a href="https://www.somafm.com/">SomaFM</a></li>
       </li>
 </article>
 <article id="j"> 
