--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
       <li><a href="https://www.newsounds.org/">NewSounds</a></li>
       <li><a href="http://musicforprogramming.net/">musicforprogramming.net</a></li>
       <li><a href="https://www.somafm.com/">SomaFM</a></li>
+      <li><a href="https://www.youka.club/">Youka(youtube-karaoke)</a></li>
       </li>
 </article>
 <article id="j"> 
