--- a/index.html
+++ b/index.html
@@ -192,10 +192,9 @@
       <li><a href="http://wax9.com/">wax9</a></li>
       <li><a href="http://hoopcha.com/">hoopcha</a></li>
       <li><a href="http://hubofuniverse.com/">hubofuniverse</a></li>
-      <li><a href="http://takemyheart.org/">takemyheart</a></li>
+      <li><a href="http://semicent.club/">semicent</a></li>
       <li><a href="http://ashevillemorris.com/">Asheville Morris</a></li>
-      <li><a href="http://wax9.com/ghab">GeneralHab (local)</a></li>
-      <li><a href="http://wax9.com/jgwedding/login.html">JonGeneva (local)</a></li>
+      <li><hl></li>
       <li><a href="http://0to255.com">0to255</a></li>
       <li><a href="http://coolors.co">coolors</a></li>
       <li><a href="https://vectr.com">vectr</a></li>
