--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
       <li><a href="http://musicforprogramming.net/">musicforprogramming.net</a></li>
       <li><a href="https://www.somafm.com/">SomaFM</a></li>
       <li><a href="https://www.youka.club/">Youka(youtube-karaoke)</a></li>
+      <li><a href="https://whyisthisinteresting.substack.com/p/why-is-this-interesting-the-international">WhyIsThisInteresting Blog Post</a></li>
       </li>
 </article>
 <article id="j"> 
