--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
       <li><a href="http://fidelity.com/">Fidelity</a></li>
       <li><a href="http://trsretire.com/">Transamerica</a></li>
       <li><a href="http://www.prudential.com/online/retirement/">Prudential</a></li>
-      <li><a href="http://bluecrossnc.com/">bluecrossnc</a></li>
+      <li><a href="http://blueconnectnc.com/">Blue Cross</a></li>
       <br>
       <li><a href="http://www.duke-energy.com/">duke-energy</a></li>
       <li><a href="http://www.att.com/">AT&amp;T</a></li>
