--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <ul>
       <li><a href="http://www.metafilter.com/">MetaFilter</a></li>
       <li><a href="http://news.ycombinator.com/">Hacker News</a></li>
-      <li><a href="http://boingboing.net/">Boing-Boing</a></li>
+      
       <li><a href="http://belong.io/">belong.io</a></li>
       <li><a href="http://reddit.com/">reddit</a></li>
       <li><a href="http://www.kottke.org/">Kottke</a></li>
@@ -66,7 +66,6 @@
       <li><a href="http://hifructose.com/">Hi-Fructose</a></li>
       <li><a href="http://hyperallergic.com/">hyperallergic</a></li>
       <li><a href="http://wewastetime.com/">wewastetime</a></li>
-      <li><a href="https://laughingsquid.com/">Laughing Squid</a></li>
       </li>
 </article>
 <article id="e"> 
@@ -148,8 +147,8 @@
       <li><a href="http://play.google.com/music">Google Play</a></li>
       <li><a href="http://play.spotify.com/">play.spotify</a></li>
       <li><a href="http://pandora.com/">pandora</a></li>
-      <li><a href="http://soundcloud.com/">soundcloud</a></li>
-      <li><a href="http://mixcloud.com/">mixcloud</a></li>
+      <li><a href="https://soundcloud.com/mikayaswabb">soundcloud: Mikaya Swabb</a></li>
+      <li><a href="https://www.mixcloud.com/tarisk/">mixcloud: Ted Riskin</a></li>
       <li><a href="http://bandcamp.com/">bandcamp</a></li>
       <li><a href="http://internet-radio.com/">internet-radio</a></li>
       <li><a href="http://rainymood.com/">rainymood</a></li>
@@ -171,6 +170,7 @@
 <article id="j"> 
       <header id="j">WITIDE</header>
       <ul>
+        <li><a href="http://twitter.com/">twitter</a></li>
       <li><a href="http://youtube.com/">youtube</a></li>
       <li><a href="http://facebook.com/">facebook</a></li>
       <li><a href="http://flickr.com/">flickr</a></li>
@@ -241,6 +241,8 @@
       <li><a href="http://what-if.xkcd.com/">what if xkcd</a></li>
       <li><a href="http://misscellania.blogspot.com/">Miss Cellania</a></li>
       <li><a href="http://blort.meepzorp.com/">Everlasting Blort</a></li>
+      <li><a href="http://boingboing.net/">Boing-Boing's Popup Ad Nightmare</a></li>
+      <li><a href="https://laughingsquid.com/">Laughing Squid</a></li>        
       </li>
 </article>
 <article id="o"> 
