--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <li><a href="http://news.ycombinator.com/">Hacker News</a></li>
       
       <li><a href="http://belong.io/">belong.io</a></li>
+      <li><a href="http://lobste.rs/">lobste.rs<br></a>
       <li><a href="http://reddit.com/">reddit</a></li>
       <li><a href="http://www.kottke.org/">Kottke</a></li>
       <li><a href="http://gothamist.com/blog.php">gothamist</a></li>
@@ -40,7 +41,6 @@
       <ul>
       <li><a href="http://daringfireball.net/">Daring Fireball</a></li>
       <li><a href="https://www.oreilly.com/radar/topics/four-short-links/">4shortlinks</a></li>
-      <li><a href="http://lobste.rs/">lobste.rs<br></a>
       <li><a href="http://reddit.com/r/programming">programming subreddit</a></li>
       <li><a href="http://slashdot.org">Slashdot</a></li>
       <li><a href="http://www.wolframalpha.com/">wolframalpha</a></li>
@@ -59,13 +59,10 @@
       <header id="d">Art Blogs</header>
       <ul>
       <li><a href="http://thisiscolossal.com/">This is Colossal</a></li>
-      <li><a href="http://mymodernmet.com/">mymodernmet</a></li>
-      <li><a href="http://thecreatorsproject.vice.com/">the creators project</a></li>
       <li><a href="http://juxtapoz.com/">Juxtapoz</a></li>
       <li><a href="http://kuriositas.com/">Kuriositas</a></li>
       <li><a href="http://hifructose.com/">Hi-Fructose</a></li>
       <li><a href="http://hyperallergic.com/">hyperallergic</a></li>
-      <li><a href="http://wewastetime.com/">wewastetime</a></li>
       </li>
 </article>
 <article id="e"> 
@@ -91,12 +88,10 @@
             <li><a href="http://coopercenter.org/demographics/Racial-Dot-Map">Racial Dot Map</a></li>     
       Maps -Travel Radius<br>
             <li><a href="http://mapnificent.net/">mapnificent.net</a></li>
-            <li><a href="http://flaviogortana.com/isoscope/">Isoscope</a></li>
       Maps -Hiking<br>
             <li><a href="https://www.nps.gov/blri/planyourvisit/roadclosures.htm/">Blue Ridge Parkway Road Closures</a></li>
             <li><a href="http://www.hikewnc.info/">HikeWNC</a></li>
             <li><a href="http://www.ncwaterfalls.com/">ncwaterfalls.com<br>
-            </a><li><a href="https://mappingsupport.com/p2/gissurfer.php">GISsurfer (Gmap4)</a></li>     
             <li><a href="http://www.npmaps.com/">National Park Maps</a></li>
             <li><a href="http://www.ashevilletrails.com/">Asheville Trails</a></li>
       Maps -Government<br>
@@ -107,7 +102,7 @@
             <li><a href="http://atlasofurbanexpansion.org//">atlas of urban expansion</a></li>
       Maps -Multiple<br>
             <li><a href="http://nationalmap.gov/">nationalmap.gov</a></li>
-            <li><a href="http://www.mappingsupport.com/p/gmap4.php?ll=37.125286,-83.979493&amp;t=m&amp;z=5&amp;label=off&amp;coord=latlng">mappingsupport (Gmap4)</a></li>     
+            <li><a href="https://mappingsupport.com/p2/gissurfer.php">mappingsupport GISSurfer(Gmap4)</a></li>     
             <li><a href="http://tools.geofabrik.de/mc/">Map Compare - Compare <br>maps for same location</a></li>     
       <br>
       </li>
@@ -119,7 +114,6 @@
       <li><a href="https://forecast.weather.gov/MapClick.php?lat=35.3331&lon=-82.4796">NOAA</a></li>
       <li><a href="https://www.wunderground.com/forecast/us/nc/hendersonville/KNCHENDE105?cm_ven=localwx_10day">Weather Underground</a></li>       
       <li><a href="https://darksky.net">darksky.net</a></li>
-      <li><a href="https://www.windy.com/">windy.com</a></li>
       </li>
 </article>
 <article id="g"> 
@@ -181,8 +175,6 @@
       <ul>
       <li><a href="http://www.google.com/">Google</a></li>
       <li><a href="http://www.duckduckgo.com/">duckduckgo</a></li>
-      <li><a href="http://www.yahoo.com/">Yahoo</a></li>
-      <li><a href="http://www.bing.com/">Bing</a></li>
       <li><a href="http://en.wikipedia.org/">Wikipedia</a></li>
       </li>
 </article>
@@ -270,11 +262,8 @@
       <li><a href="http://www.southwest.com/">southwest</a></li>
       <li><a href="http://www.skyscanner.com/">skyscanner</a></li>
       <li><a href="http://www.kiwi.com/">kiwi</a></li>
-      <li><a href="http://www.routehappy.com/">routehappy</a></li>
       <li><a href="http://www.momondo.com/">momondo</a></li>
-      <li><a href="http://www.hipmunk.com/">hipmunk</a></li>
       <li><a href="https://www.google.com/flights/explore/">Google Flight Explorer</a></li>
-      <li><a href="http://www.adioso.com/">adioso</a></li>
       <li><a href="http://www.seat61.com/">seat61 (Europe trains)</a></li>
       </li>
 </article>
