--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
       <li><a href="http://www.google.com/">Google</a></li>
       <li><a href="http://www.duckduckgo.com/">duckduckgo</a></li>
       <li><a href="http://en.wikipedia.org/">Wikipedia</a></li>
+      <li><a href="https://yandex.com/">Yandex</a></li>
       </li>
 </article>
 <article id="l"> 
