--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 <article id="i"> 
       <header id="i">Noises</header>
       <ul>
-      <li><a href="http://play.google.com/music">Google Play</a></li>
+      <li><a href="http://music.youtube.com/music">YouTube Music</a></li>
       <li><a href="http://play.spotify.com/">play.spotify</a></li>
       <li><a href="http://pandora.com/">pandora</a></li>
       <li><a href="https://soundcloud.com/mikayaswabb">soundcloud: Mikaya Swabb</a></li>
