--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
       <li><a href="http://pixlr.com/editor/">pixlr</a></li>
       <li><a href="http://photopea.com/">photopea</a></li>
       <li><a href="http://dribbble.com/">dribbble</a></li>
-      
+      <li><a href="https://nimbletext.com/">nimbletext</a></li>
       <li><a href="http://regex101.com/">regex101</a></li>
       <li><a href="http://codesandbox.io/">codesandbox</a></li>
       <li><a href="http://namecheap.com/">namecheap</a></li>
