--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
       <li><a href="https://www.mixcloud.com/tarisk/">mixcloud: Ted Riskin</a></li>
       <li><a href="http://bandcamp.com/">bandcamp</a></li>
       <li><a href="http://internet-radio.com/">internet-radio</a></li>
+      <li><a href="http://radio-locator.com/">radio-locator</a></li>
       <li><a href="http://rainymood.com/">rainymood</a></li>
       <li><a href="http://coffitivity.com/">coffitivity</a></li>
       <li><a href="http://asoftmurmur.com/">asoftmurmur.com</a></li>
