--- a/index.html
+++ b/index.html
@@ -169,7 +169,6 @@
       <li><a href="http://youtube.com/">youtube</a></li>
       <li><a href="http://facebook.com/">facebook</a></li>
       <li><a href="http://flickr.com/">flickr</a></li>
-        <li><a href="http://mltshp.com/polular">mltshp</a></li>
         
       </li>
 </article>
@@ -188,7 +187,7 @@
       <li><a href="http://wax9.com/">wax9</a></li>
       <li><a href="http://hoopcha.com/">hoopcha</a></li>
       <li><a href="http://hubofuniverse.com/">hubofuniverse</a></li>
-      <li><a href="http://semicent.club/">semicent</a></li>
+      <li><a href="http://wax9.com/semicent.club/">semicent</a></li>
       <li><a href="http://ashevillemorris.com/">Asheville Morris</a></li>
       <li><hl></li>
       <li><a href="http://0to255.com">0to255</a></li>
@@ -234,7 +233,7 @@
       <header id="n">Ha</header>
       <ul>
       <li><a href="http://www.xkcd.com/">xkcd</a></li>
-      <li><a href="http://what-if.xkcd.com/">what if xkcd</a></li>
+      <li><a href="http://mltshp.com/popular">mltshp</a></li>
       <li><a href="http://misscellania.blogspot.com/">Miss Cellania</a></li>
       <li><a href="http://blort.meepzorp.com/">Everlasting Blort</a></li>
       <li><a href="http://boingboing.net/">Boing-Boing's Popup Ad Nightmare</a></li>
