--- a/semicent.club/index.html
+++ b/semicent.club/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
   <title>50</title>
-  <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" href="https://wax9.com/wax9favicon.png" />
 </head>
   <style>
@@ -34,6 +33,14 @@
         -1px 1px 0 #000,
         1px 1px 0 #000;
     }
+    .a1AzKnsUM2 {
+      animation: pulse 2s alternate infinite;
+    }
+    @keyframes pulse {
+      100% {
+        r: 30;
+      }
+    }
   </style>
 <body>
 <div class="textblock">
@@ -48,7 +55,7 @@
 <p>
 Fifty truly is a grand old age,<br>
 each day we rise, the turning of a page.<br>
-Our lives enscribed but chapters fade to grey,<br>
+Our lives inscribed but chapters fade to grey,<br>
 the denouement unknown until that day.<br>
 </p><p>
 Amanda stands before me as a dream,<br>
@@ -57,7 +64,7 @@ How can this be? The years so fleet. And yet...<br>
 she looks exactly like the day we met.<br>
 </p><p>
 That day, in Mitchell County long ago,<br>
-with crazy Z. and ever steady Mo.<br>
+with zany Z. and ever steady Mo.<br>
 Our weekends spent in mild debauchery,<br>
 filled with sounds of breaking pottery.<br>
 </p><p>
@@ -66,10 +73,10 @@ they used your parasols against the heat.<br>
 The spiral dance, a joyous happy day.<br>
 The photos came out good, or so they say.<br>
 </p><p>
-Nurses/Chaplains/Aides will come and go,<br>
-Amanda sticks around because she knows,<br>
-the sturdiness of thirty cement trucks,<br>
-The fortitude to handle Linda Fluck.<br>
+Those villianous piggies the Hospital Co. of America<br>
+rapaciously swindle with balderdash and esoterica.<br>
+You say there are still lots of great things about your position,<br>
+but remember to always be ready to retain volition.<br>
 </p><p>
 Each day's commute reveals another pain,<br>
 but I think of you to pacify my brain.<br>
@@ -82,7 +89,11 @@ Still juggling work, commitments, memory gaps,<br>
 life and health and lots of cozy naps.<br>
 </p>
 </div>
+<div>      
+      <img src="semicent.club.jpg" alt="logo" height="174" width="600">
+</div>
 <div style="font-size:0.8em; float:right; color: white;">
+      (Most verses in iambic pentameter, one in dactylic pentameter)<br>
   Background Image: Someone35 [<a href="https://creativecommons.org/licenses/by-sa/3.0">CC BY-SA 3.0</a>], 
   <a href="https://commons.wikimedia.org/wiki/File:New_hampshire_in_autumn.jpg">via Wikimedia Commons</a>
 </div>
