--- a/index.html
+++ b/index.html
@@ -206,15 +206,15 @@
 <article id="m"> 
       <header id="m">My Biz</header>
       <ul>
-      <li><a href="http://wellsfargo.com/">Wells Fargo</a></li>
-      <li><a href="http://fidelity.com/">Fidelity</a></li>
-      <li><a href="http://trsretire.com/">Transamerica</a></li>
-      <li><a href="http://www.prudential.com/online/retirement/">Prudential</a></li>
-      <li><a href="http://blueconnectnc.com/">Blue Cross</a></li>
+      <li><a href="https://wellsfargo.com/">Wells Fargo</a></li>
+      <li><a href="https://fidelity.com/">Fidelity</a></li>
+      <li><a href="https://login.morganstanleyclientserv.com/">Morgan Stanley</a></li>
+      <li><a href="https://trsretire.com/">Transamerica</a></li>
+      <li><a href="https://www.prudential.com/online/retirement/">Prudential</a></li>
+      <li><a href="https://blueconnectnc.com/">Blue Cross</a></li>
       <br>
       <li><a href="http://www.duke-energy.com/">Duke Energy</a></li>
       <li><a href="http://www.dominionenergync.com/">Dominion Energy</a></li> 
-      <li><a href="http://www.att.com/">AT&amp;T</a></li>
       <li><a href="http://www.verizon.com/">Verizon</a></li>
       <li><a href="https://www.morrisbroadband.com/">Morris Broadband</a></li>
       <li><a href="https://hvlnc.authoritypay.com">HVL Water</a></li>
