--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
       <ul>
       <li><a href="http://ashevilleweather.com/Forecast/Asheville">Ray's Weather Center</a></li>
       <li><a href="https://forecast.weather.gov/MapClick.php?lat=35.3331&lon=-82.4796">NOAA</a></li>
+      <li><a href="https://water.weather.gov/ahps2/index.php?wfo=gsp">NWS Hydrologic Prediction</a></li>
       <li><a href="https://www.wunderground.com/forecast/us/nc/hendersonville/KNCHENDE105?cm_ven=localwx_10day">Weather Underground</a></li>       
       <li><a href="https://darksky.net">darksky.net</a></li>
       </li>
