--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
       <header id="b">Computers</header>
       <ul>
       <li><a href="http://daringfireball.net/">Daring Fireball</a></li>
-      <li><a href="https://www.oreilly.com/radar/topics/four-short-links/">4shortlinks</a></li>
       <li><a href="http://reddit.com/r/programming">programming subreddit</a></li>
       <li><a href="http://slashdot.org">Slashdot</a></li>
       <li><a href="http://www.wolframalpha.com/">wolframalpha</a></li>
@@ -170,7 +169,13 @@
       <li><a href="http://youtube.com/">youtube</a></li>
       <li><a href="http://facebook.com/">facebook</a></li>
       <li><a href="http://flickr.com/">flickr</a></li>
-        
+      <li><a href="https://www.tumblr.com/">tumblr</a></li>
+      <li><a href="https://www.instagram.com//">instagram</a></li>
+      <li><a href="http://pinterest.com/">pinterest</a></li>
+      <li><a href="http://deviantart.com/">deviantart</a></li> 
+      <li><a href="http://quora.com/">quora</a></li> 
+      <li><a href="http://ravelry.com/">ravelry</a></li>
+      <li><a href="http://tiktok.com/">tiktok</a></li>
       </li>
 </article>
 <article id="k"> 
