--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width">
   <meta charset="UTF-8">
   <title>Wax9</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css">https://www.kexp.org/listen/noises
   <link rel="icon" type="image/png" href="https://wax9.com/wax9favicon.png" />
 </head>
 <body>
@@ -166,6 +166,7 @@
       <li><a href="http://podomatic.com/">podomatic.com</a></li>
       <li><a href="http://electroswing-radio.com/">electroswing-radio.com</a></li>
       <li><a href="http://wfmu.org/">wfmu.org</a></li>
+      <li><a href="https://www.kexp.org/listen/>kexp.org</a></li>
       <li><a href="http://ashevillefm.org/">ashevillefm.org</a></li>
       <li><a href="https://www.newsounds.org/">NewSounds</a></li>
       <li><a href="http://musicforprogramming.net/">musicforprogramming.net</a></li>
