--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       <li><a href="http://podomatic.com/">podomatic.com</a></li>
       <li><a href="http://electroswing-radio.com/">electroswing-radio.com</a></li>
       <li><a href="http://wfmu.org/">wfmu.org</a></li>
-      <li><a href="https://www.kexp.org/listen/>kexp.org</a></li>
+      <li><a href="https://www.kexp.org/listen/">kexp.org</a></li>
       <li><a href="http://ashevillefm.org/">ashevillefm.org</a></li>
       <li><a href="https://www.newsounds.org/">NewSounds</a></li>
       <li><a href="http://musicforprogramming.net/">musicforprogramming.net</a></li>
