--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width">
   <meta charset="UTF-8">
   <title>Wax9</title>
-  <link rel="stylesheet" href="style.css">https://www.kexp.org/listen/noises
+  <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" href="https://wax9.com/wax9favicon.png" />
 </head>
 <body>
