--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
       <ul>
       <li><a href="http://www.google.com/">Google</a></li>
       <li><a href="http://www.duckduckgo.com/">duckduckgo</a></li>
+        <li><a href="https://same.energy/">Same Energy visual search</a>
       <li><a href="http://en.wikipedia.org/">Wikipedia</a></li>
       <li><a href="https://yandex.com/">Yandex</a></li>
       </li>
