--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <li><a href="http://mltshp.com/popular">mltshp</a></li>
     <li><a href="http://misscellania.blogspot.com/">Miss Cellania</a></li>
     <li><a href="http://blort.meepzorp.com/">Everlasting Blort</a></li>
-    <li><a href="http://boingboing.net/">Boing-Boing's Popup Ad Nightmare</a></li>
+    <li><a href="http://boingboing.net/">Boing-Boing</a></li>
     <li><a href="https://laughingsquid.com/">Laughing Squid</a></li>        
     </li>
 </article>
