--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
     <li><a href="http://misscellania.blogspot.com/">Miss Cellania</a></li>
     <li><a href="http://blort.meepzorp.com/">Everlasting Blort</a></li>
     <li><a href="http://boingboing.net/">Boing-Boing</a></li>
-    <li><a href="https://laughingsquid.com/">Laughing Squid</a></li>        
+    <li><a href="https://laughingsquid.com/">Laughing Squid</a></li>      
+      <li><a href="https://thekidshouldseethis.com/">The Kids Should See This</a></li>
     </li>
 </article>
 <article id="f"> 
@@ -158,6 +159,7 @@
       <li><a href="http://bandcamp.com/">bandcamp</a></li>
       <li><a href="http://internet-radio.com/">internet-radio</a></li>
       <li><a href="http://radio-locator.com/">radio-locator</a></li>
+        <li><a href="https://lofi.cafe/">lofi.cafe</a></li>
       <li><a href="http://rainymood.com/">rainymood</a></li>
       <li><a href="http://coffitivity.com/">coffitivity</a></li>
       <li><a href="http://asoftmurmur.com/">asoftmurmur.com</a></li>
