--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
       Maps -Specialized<br>
             <li><a href="http://publicradiomap.com/">Public Radio Map</a></li>
             <li><a href="http://thetruesize.com">The True Size</a></li>     
-            <li><a href="http://coopercenter.org/demographics/Racial-Dot-Map">Racial Dot Map</a></li>     
+            <li><a href="http://coopercenter.org/demographics/Racial-Dot-Map">Racial Dot Map</a></li>
+        <li><a href="http://www.lightpollutionmap.info">Light Pollution Map</a></li>
       Maps -Travel Radius<br>
             <li><a href="http://mapnificent.net/">mapnificent.net</a></li>
       Maps -Hiking<br>
