--- a/index.html
+++ b/index.html
@@ -236,7 +236,8 @@
       <li><a href="https://fidelity.com/">Fidelity</a></li>
       <li><a href="https://login.morganstanleyclientserv.com/">Morgan Stanley</a></li>
       <li><a href="https://www.prudential.com/online/retirement/">Prudential</a></li>
-      <li><a href="https://blueconnectnc.com/">Blue Cross</a></li>
+      <li><a href="https://my.cigna.com/">Cigna</a></li>
+        <li><a href="https://www.express-scripts.com/">express-scripts</a></li>
       <br>
       <li><a href="http://www.duke-energy.com/">Duke Energy</a></li>
       <li><a href="http://www.dominionenergync.com/">Dominion Energy</a></li> 
