--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       <header id="j">Noises</header>
       <ul>
       <li><a href="http://music.youtube.com/music">YouTube Music</a></li>
-      <li><a href="http://play.spotify.com/">play.spotify</a></li>
+      <li><a href="http://open.spotify.com/">Spotify</a></li>
       <li><a href="http://pandora.com/">pandora</a></li>
       <li><a href="https://soundcloud.com/mikayaswabb">soundcloud: Mikaya Swabb</a></li>
       <li><a href="https://www.mixcloud.com/tarisk/">mixcloud: Ted Riskin</a></li>
