--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@
       <li><a href="http://nautil.us/">nautil.us</a></li>
       <li><a href="http://aeon.co/">aeon.co</a></li>
       <li><a href="http://longreads.com/">longreads</a></li>
+      <li><a href="http://slate.com/">slate</a></li>
+      <li><a href="http://salon.com/">salon</a></li>
       </li>
 </article>
 <article id="i"> 
