--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
       <li><a href="http://longreads.com/">longreads</a></li>
       <li><a href="http://slate.com/">slate</a></li>
       <li><a href="http://salon.com/">salon</a></li>
+      <li><a href="https://www.vox.com/">vox</a></li>
       </li>
 </article>
 <article id="i"> 
