--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <li><a href="http://www.metafilter.com/">MetaFilter</a></li>
       <li><a href="http://news.ycombinator.com/">Hacker News</a></li>
       <li><a href="http://nytimes.com/">NY Times</a></li>
+        <li><a href="http://washingtonpost.com/">Washington Post</a></li>
       <li><a href="http://belong.io/">belong.io</a></li>
       <li><a href="http://lobste.rs/">lobste.rs<br></a>
       <li><a href="http://reddit.com/">reddit</a></li>
