--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <li><a href="http://reddit.com/">reddit</a></li>
       <li><a href="http://www.kottke.org/">Kottke</a></li>
       <li><a href="http://gothamist.com/blog.php">gothamist</a></li>
-      </li>
+      </ul>
 </article>
 <article id="b"> 
       <header id="b">Computers</header>
@@ -46,14 +46,14 @@
       <li><a href="http://www.wolframalpha.com/">wolframalpha</a></li>
       <li><a href="http://github.com">github.com</a></li>
       <li><a href="http://stackoverflow.com/">stackoverflow</a></li>
-      </li>
+      </ul>
 </article>
 <article id="c"> 
       <header id="c">Mail</header>
       <ul>
       <li><a href="http://gmail.google.com/">Gmail</a></li>
       <li><a href="http://mail.yahoo.com/">Yahoo Mail</a></li>
-      </li>
+      </ul>
 </article>
 <article id="d"> 
       <header id="d">Art Blogs</header>
@@ -63,7 +63,8 @@
       <li><a href="http://kuriositas.com/">Kuriositas</a></li>
       <li><a href="http://hifructose.com/">Hi-Fructose</a></li>
       <li><a href="http://hyperallergic.com/">hyperallergic</a></li>
-      </li>
+        <li><a href="https://www.design-is-fine.org/">Desing is Fine</a></li>
+      </ul>
 </article>
 <article id="e"> 
     <header id="e">Ha</header>
@@ -122,7 +123,7 @@
             <li><a href="http://tools.geofabrik.de/mc/">Map Compare - Compare <br>maps for same location</a></li> 
             <li><a href="https://satellites.pro/">satellites.pro</a></li>
       <br>
-      </li>
+      </ul>
 </article>
 <article id="g"> 
       <header id="g">Weather</header>
@@ -133,7 +134,7 @@
       <li><a href="https://www.wunderground.com/forecast/us/nc/hendersonville/KNCHENDE105?cm_ven=localwx_10day">Weather Underground</a></li>       
       <li><a href="https://darksky.net/forecast/35.3149,-82.4931/us12/en">darksky.net</a></li>
       <li><a href="https://www.lightningmaps.org/">lightningmaps.org</a></li>
-      </li>
+      </ul>
 </article>
 <article id="h"> 
       <header id="h">Read</header>
@@ -147,14 +148,14 @@
       <li><a href="http://slate.com/">slate</a></li>
       <li><a href="http://salon.com/">salon</a></li>
       <li><a href="https://www.vox.com/">vox</a></li>
-      </li>
+      </ul>
 </article>
 <article id="i"> 
       <header id="i">Real</header>
       <ul>
       <li><a href="http://zillow.com/">zillow</a></li>
       <li><a href="http://realtor.com/">realtor</a></li>
-      </li>
+      </ul>
 </article>
 
 <article id="j"> 
@@ -184,7 +185,7 @@
       <li><a href="https://www.somafm.com/">SomaFM</a></li>
       <li><a href="https://www.youka.club/">Youka(youtube-karaoke)</a></li>
       <li><a href="https://whyisthisinteresting.substack.com/p/why-is-this-interesting-the-international">WhyIsThisInteresting Blog Post</a></li>
-      </li>
+      </ul>
 </article>
 <article id="k"> 
       <header id="k">WITIDE</header>
@@ -200,7 +201,7 @@
       <li><a href="http://quora.com/">quora</a></li> 
       <li><a href="http://ravelry.com/">ravelry</a></li>
       <li><a href="http://tiktok.com/">tiktok</a></li>
-      </li>
+      </ul>
 </article>
 <article id="l"> 
       <header id="l">Search</header>
@@ -210,7 +211,7 @@
         <li><a href="https://same.energy/">Same Energy visual search</a>
       <li><a href="http://en.wikipedia.org/">Wikipedia</a></li>
       <li><a href="https://yandex.com/">Yandex</a></li>
-      </li>
+      </ul>
 </article>
 <article id="m"> 
       <header id="m">My Web</header>
@@ -232,7 +233,7 @@
       <li><a href="http://codesandbox.io/">codesandbox</a></li>
       <li><a href="http://namecheap.com/">namecheap</a></li>
       <li><a href="http://digitalocean.com/">digitalocean</a></li>
-      </li>
+      </ul>
 </article>
 <article id="n"> 
       <header id="n">My Biz</header>
@@ -254,7 +255,7 @@
       <li><a href="https://www.firstcitizens.com/">First Citizens</a></li>
       <li><a href="https://creditcards.citi.com/">Citibank</a></li>
       <br>
-      </li>
+      </ul>
 </article>
 <article id="o"> 
       <header id="o">Design</header>
@@ -265,7 +266,7 @@
       <li><a href="http://notcot.org/">notcot</a></li>
       <li><a href="http://dezeen.com/">dezeen</a></li>
       <li><a href="http://designboom.com/">Design Boom</a></li>
-      </li>
+      </ul>
 </article>
 
 <article id="p"> 
@@ -282,7 +283,7 @@
       <li><a href="http://www.momondo.com/">momondo</a></li>
       <li><a href="https://www.google.com/flights/explore/">Google Flight Explorer</a></li>
       <li><a href="http://www.seat61.com/">seat61 (Europe trains)</a></li>
-      </li>
+      </ul>
 </article>
 <article id="q"> 
       <header id="q">Jobs</header>
@@ -295,7 +296,7 @@
       <li><a href="https://meetthegeeks.net/asheville-it-tech-technology-jobs/">meetthegeeks</a></li>
       <li><a href="http://weworkremotely.com/">weworkremotely</a></li>
       <li><a href="http://remoteok.io/">remoteok</a></li>      
-      </li>
+      </ul>
 </article>
 <article id="r"> 
       <header id="r">Asheville</header>
@@ -308,7 +309,7 @@
       <li><a href="http://wncw.org/">WNCW</a></li>
       <li><a href="http://wlos.com/">WLOS</a></li>
       <li><a href="http://bullpup.lib.unca.edu/library/">Ramsey Library</a></li>
-      </li>
+      </ul>
 </article>
                   
 </main>
