--- a/index.html
+++ b/index.html
@@ -286,16 +286,9 @@
       </ul>
 </article>
 <article id="q"> 
-      <header id="q">Jobs</header>
+      <header id="q">Space for rent</header>
       <ul>
-      <li><a href="http://www.indeed.com/">indeed</a></li>
-      <li><a href="http://stackoverflow.com/jobs">stackoverflow jobs</a></li>
-      <li><a href="http://stackoverflow.com/jobs/remote-developer-jobs?sort=p">stackoverflow remote</a></li>
-      <li><a href="http://avlcoders.slack.com/">avlcoders.slack</a></li>
-      <li><a href="http://ventureasheville.com/jobs/">ventureasheville</a></li>
-      <li><a href="https://meetthegeeks.net/asheville-it-tech-technology-jobs/">meetthegeeks</a></li>
-      <li><a href="http://weworkremotely.com/">weworkremotely</a></li>
-      <li><a href="http://remoteok.io/">remoteok</a></li>      
+      <li>...</li>      
       </ul>
 </article>
 <article id="r"> 
@@ -309,6 +302,7 @@
       <li><a href="http://wncw.org/">WNCW</a></li>
       <li><a href="http://wlos.com/">WLOS</a></li>
       <li><a href="http://bullpup.lib.unca.edu/library/">Ramsey Library</a></li>
+      <li><a href="http://avlcoders.slack.com/">avlcoders.slack</a></li>        
       </ul>
 </article>
                   
