--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <li><a href="http://kuriositas.com/">Kuriositas</a></li>
       <li><a href="http://hifructose.com/">Hi-Fructose</a></li>
       <li><a href="http://hyperallergic.com/">hyperallergic</a></li>
-        <li><a href="https://www.design-is-fine.org/">Desing is Fine</a></li>
+        <li><a href="https://www.design-is-fine.org/">Design is Fine</a></li>
       </ul>
 </article>
 <article id="e"> 
