--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
             <li><a href="http://mapnificent.net/">mapnificent.net</a></li>
       Maps -Hiking<br>
             <li><a href="https://www.nps.gov/blri/planyourvisit/roadclosures.htm/">Blue Ridge Parkway Road Closures</a></li>
+            <li><a href="https://www.peakfinder.org/">PeakFinder</a></li>
             <li><a href="http://www.hikewnc.info/">HikeWNC</a></li>
             <li><a href="http://www.ncwaterfalls.com/">ncwaterfalls.com<br>
             <li><a href="http://www.npmaps.com/">National Park Maps</a></li>
