--- a/index.html
+++ b/index.html
@@ -209,7 +209,10 @@
       <ul>
       <li><a href="http://www.google.com/">Google</a></li>
       <li><a href="http://www.duckduckgo.com/">duckduckgo</a></li>
-        <li><a href="https://same.energy/">Same Energy visual search</a>
+      <li><a href="http://www.neeva.com/">neeva</a></li>
+      <li><a href="http://www.you.com/">you.com</a></li>
+      <li><a href="http://www.kagi.com/">kagi</a></li>
+      <li><a href="https://same.energy/">Same Energy visual search</a>
       <li><a href="http://en.wikipedia.org/">Wikipedia</a></li>
       <li><a href="https://yandex.com/">Yandex</a></li>
       </ul>
